--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
   <!-- Sidebar (Desktop) -->
   <nav class="sidebar">
     <a href="#" class="sidebar-item active" data-section="paroles" role="button" aria-current="page">🎵 Tonon-kira</a>
-    <a href="about.html" class="sidebar-item" role="button">ℹ️ À propos</a>
+    <a href="About.html" class="sidebar-item" role="button">ℹ️ À propos</a>
   </nav>
 
   <!-- Main content -->
